# substrate-wasmedge

./: README.md  config.toml
.github/workflows/: wasmedge_executor.yml
WasmEdge/bindings/rust/wasmedge-sys/src/: lib.rs
benchmark/: README.md
client/executor/: Cargo.toml
client/executor/wasmedge/: Cargo.toml
client/executor/wasmedge/src/: host.rs  imports.rs  instance_wrapper.rs  lib.rs  runtime.rs  tests.rs  util.rs
client/executor/wasmtime/src/: host.rs
substrate-node-template/node/: Cargo.toml
substrate-node-template/pallets/template/: Cargo.toml
substrate-node-template/runtime/: Cargo.toml
substrate/client/cli/: Cargo.toml
substrate/client/cli/src/: arg_enums.rs
substrate/client/executor/: Cargo.toml
substrate/client/executor/benches/: bench.rs
substrate/client/executor/src/: wasm_runtime.rs
substrate/client/executor/src/integration_tests/: mod.rs
substrate/client/executor/wasmedge/: Cargo.toml
substrate/client/executor/wasmedge/src/: host.rs  imports.rs  instance_wrapper.rs  lib.rs  runtime.rs  tests.rs  util.rs
substrate/client/service/: Cargo.toml
